--- a/src/client/dockerfile
+++ b/src/client/dockerfile
@@ -18,13 +18,13 @@ RUN go build -o vpn-client ./cmd/Client/client.go
 # Make binary executable
 RUN chmod +x vpn-client
 
-# # Create certificate directory and generate client certificates
+# # certificate directory and generate client certificates
 # RUN mkdir -p /etc/vpn && \
 #     openssl req -x509 -newkey rsa:4096 -keyout /etc/vpn/client-key.pem -out /etc/vpn/client-cert.pem \
 #     -days 365 -nodes -subj "/CN=vpn-client" && \
 #     chmod 600 /etc/vpn/client-key.pem && \
 #     chmod 644 /etc/vpn/client-cert.pem
 
-# Use shell form to allow command override from docker-compose
+
 ENTRYPOINT ["/app/vpn-client"]
 CMD ["-server", "vpn-server", "-port", "8080"]
